# Circuit-Simulator

./: .gitignore  README.md  pyproject.toml
circuit_simulator/: __init__.py  basic_circuit_elements.py  circuit.py
tests/: test_basic_circuit_elements.py  test_circuit.py
